# CaptalistServer

./: .breakpoints  README.md  alliance.py  army.py  cities.py  gov_classes.py  main.py  pyproject.toml  requirements.txt  server.db  server.py  trade_classies.py  user_classes.py
static/css/: about.css  contact.css  home.css  index.css  sign_up.css
templates/: about.html  contact.html  home.html  index.html  login.html  sign_up.html
