[tool.poetry]
name = "repl_python3_beta_CaptalistServer"
version = "0.1.0"
description = ""
authors = ["LearnCode2 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
Flask-SocketIO = "^5.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
